修改配置文件

--- a/1.安装配置.md
+++ b/1.安装配置.md
@@ -63,17 +63,18 @@ $
 ### 4. 修改配置文件
 ```
 driftfile /var/lib/ntp/drift
-restrict default kod nomodify notrap nopeer noquery    #<==拒绝 IPv4 的用户
-restrict -6 default kod nomodify notrap nopeer noquery #<==拒绝 IPv6 的用户
-restrict 127.0.0.1  #<==放行本地来源(默认值)
-restrict -6 ::1     #<==放行本地来源(默认值)
-restrict 192.168.100.0 mask 255.255.255.0 nomodify #<==放行本地内网
-server cn.pool.ntp.org prefer
-server stdtime.gov.hk
-server ntp.sjtu.edu.cn
-server  127.127.1.0
-fudge   127.127.1.0     stratum 10 #<==#这行是时间服务器的层次。设为0则为顶级，如果要向别的NTP服务器更新时间，请不要把它设为0
+restrict default kod nomodify notrap nopeer noquery
+restrict -6 default kod nomodify notrap nopeer noquery
+restrict 127.0.0.1 
+restrict -6 ::1
+restrict 192.168.100.0 mask 255.255.255.0 nomodify
 restrict 192.168.100.0 mask 255.255.255.0 nomodify notrap
+server cn.pool.ntp.org   prefer
+server 0.stdtime.gov.h   iburstk
+server 1.ntp.sjtu.edu.cn iburst
+server 127.127.1.0
+fudge   127.127.1.0     stratum 10
+SYNC_HWCLOCK=yes
 includefile /etc/ntp/crypto/pw
 keys /etc/ntp/keys
 ```
